# cel

./: .gitmodules  Cargo.toml  LICENSE  README.md
exprpb/: Cargo.toml  README.md  build.rs
exprpb/src/: lib.rs
exprpb/src/protos/: cel_service.rs  checked.rs  conformance_service.rs  eval.rs  explain.rs  mod.rs  status.rs  syntax.rs  value.rs
