[package]
name = "cel"
version = "0.0.0"
authors = ["Aaron Todd <aajtodd@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Rust implementation of the Common Expression Language (CEL)"
# repository = "https://github.com/aajtodd/cel"
keywords = ["cel", "expression"]
categories = ["parser-implementations"]
readme = "README.md"


[dependencies]
